Add "enable-native-access" JVM flag to prevent JDK24 warning
See also: https://docs.oracle.com/en/java/javase/24/docs/api/java.base/java/lang/doc-files/RestrictedMethods.html